--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ google-resumable-media==2.3.2
 googleapis-common-protos==1.56.0
 grpcio==1.45.0
 grpcio-status==1.45.0
+gunicorn==20.1.0
 httplib2==0.20.4
 idna==3.3
 itsdangerous==2.1.2
