--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.2
 colorama==0.4.4
 firebase-admin==5.2.0
 Flask==2.1.1
+Flask-HTTPAuth==4.6.0
 Flask-RESTful==0.3.9
 google-api-core==2.7.2
 google-api-python-client==2.45.0
