--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 aniso8601==9.0.1
+attrs==21.4.0
+Automat==20.2.0
 CacheControl==0.12.11
 cachetools==5.0.0
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.1.2
 colorama==0.4.4
+constantly==15.1.0
+cryptography==37.0.2
 firebase-admin==5.2.0
 Flask==2.1.1
 Flask-HTTPAuth==4.6.0
@@ -23,20 +28,33 @@ grpcio==1.45.0
 grpcio-status==1.45.0
 gunicorn==20.1.0
 httplib2==0.20.4
+hyperlink==21.0.0
 idna==3.3
+incremental==21.3.0
 itsdangerous==2.1.2
 Jinja2==3.1.1
+json-rpc==1.13.0
+jsonrpc==3.0.1
 MarkupSafe==2.1.1
 msgpack==1.0.3
+mypy-extensions==0.4.3
 proto-plus==1.20.3
 protobuf==3.20.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.21
+pyOpenSSL==22.0.0
 pyparsing==3.0.8
 pytz==2022.1
 requests==2.27.1
 rsa==4.8
+service-identity==21.1.0
 six==1.16.0
+Twisted==22.4.0
+typeguard==2.13.3
+typing-inspect==0.7.1
+typing_extensions==4.2.0
 uritemplate==4.1.1
 urllib3==1.26.9
 Werkzeug==2.1.1
+zope.interface==5.4.0
