--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,10 @@ googleapis-common-protos==1.56.0
 grpcio==1.45.0
 grpcio-status==1.45.0
 gunicorn==20.1.0
+h11==0.13.0
+httpcore==0.12.3
 httplib2==0.20.4
+httpx==0.17.1
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
@@ -38,6 +41,7 @@ jsonrpc==3.0.1
 MarkupSafe==2.1.1
 msgpack==1.0.3
 mypy-extensions==0.4.3
+pjrpc==1.5.0
 proto-plus==1.20.3
 protobuf==3.20.1
 pyasn1==0.4.8
@@ -47,9 +51,11 @@ pyOpenSSL==22.0.0
 pyparsing==3.0.8
 pytz==2022.1
 requests==2.27.1
+rfc3986==1.5.0
 rsa==4.8
 service-identity==21.1.0
 six==1.16.0
+sniffio==1.2.0
 Twisted==22.4.0
 typeguard==2.13.3
 typing-inspect==0.7.1
